fix typo on settings page

--- a/views/pages/settings.jet.html
+++ b/views/pages/settings.jet.html
@@ -2,7 +2,7 @@
   <h1>Settings</h1>
   <p>
     PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your
-    preferences, which you can change on this page to customize yout experience on this instance.
+    preferences, which you can change on this page to customize your experience on this instance.
   </p>
   <details>
     <summary>
