Fix novel settings bar displaying into columns

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -955,6 +955,9 @@ nav .sidebar-item img {
   width: 30px;
   height: 30px;
 }
+.novel .novel-settings .novel-settings-wrapper {
+  display: flex;
+}
 .novel .novel-settings .dropdown {
   position: relative;
   display: inline-block;
