--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -1115,6 +1115,10 @@ nav {
       height: 30px;
     }
 
+    .novel-settings-wrapper {
+      display: flex;
+    }
+
     /* The container <div> - needed to position the dropdown content */
     .dropdown {
       position: relative;
