Major internal changes to the tag page

--- a/views/pages/tag.jet.html
+++ b/views/pages/tag.jet.html
@@ -28,36 +28,28 @@
   </div>
 
   <div class="switcher">
-    {{ url := "/tags/" + TrueTag + "?order=" + Queries.Order + "&mode=" +
-    Queries.Mode + "&ratio=" + Queries.Ratio + "&page=1" + "&category=" }}
     <div class="switch-title">Type</div>
-    <a href="{{url }}artworks" class="switch-button">All</a>
-    <a href="{{url }}illustrations" class="switch-button">Illustrations</a>
-    <a href="{{url }}manga" class="switch-button">Manga</a>
+    <a href='{{URLC("category", "artworks")}}' class="switch-button">All</a>
+	<a href='{{URLC("category", "illustrations")}}' class="switch-button">Illustrations</a>
+	<a href='{{URLC("category", "manga")}}' class="switch-button">Manga</a>
   </div>
   <div class="switcher">
-    {{ url := "/tags/" + TrueTag + "?category=" + Queries.Category + "&mode=" +
-    Queries.Mode + "&ratio=" + Queries.Ratio + "&page=1" + "&order=" }}
     <div class="switch-title">Order</div>
-    <a href="{{url }}date_d" class="switch-button">Newest</a>
-    <a href="{{url }}date" class="switch-button">Oldest</a>
+    <a href='{{URLC("order", "date_d")}}' class="switch-button">Newest</a>
+    <a href='{{URLC("order", "date")}}' class="switch-button">Oldest</a>
   </div>
   <div class="switcher">
     <div class="switch-title">Filter</div>
-    {{ url := "/tags/" + TrueTag + "?category=" + Queries.Category + "&order="
-    + Queries.Order + "&ratio=" + Queries.Ratio + "&page=1" + "&mode=" }}
-    <a href="{{url }}all" class="switch-button">All</a>
-    <a href="{{url }}safe" class="switch-button">Safe</a>
-    <a href="{{url }}r18" class="switch-button">R-18</a>
+    <a href='{{URLC("mode", "all")}}' class="switch-button">All</a>
+    <a href='{{URLC("mode", "safe")}}' class="switch-button">Safe</a>
+    <a href='{{URLC("mode", "r18")}}' class="switch-button">R-18</a>
   </div>
   <div class="switcher">
     <div class="switch-title">Ratio</div>
-    {{ url := "/tags/" + TrueTag + "?category=" + Queries.Category + "&order="
-    + Queries.Order + "&page=1" + "&mode=" + Queries.Mode + "&ratio=" }}
-    <a href="{{url }}" class="switch-button">All</a>
-    <a href="{{url }}-0.5" class="switch-button">Portrait</a>
-    <a href="{{url }}0" class="switch-button">Square</a>
-    <a href="{{url }}0.5" class="switch-button">Landscape</a>
+    <a href='{{URLC("ratio", "")}}' class="switch-button">All</a>
+    <a href='{{URLC("ratio", "-0.5")}}' class="switch-button">Portrait</a>
+    <a href='{{URLC("ratio", "0")}}' class="switch-button">Square</a>
+    <a href='{{URLC("ratio", "0.5")}}' class="switch-button">Landscape</a>
   </div>
   {{ if Data.Popular.Recent }}
   <h2>Popular artworks</h2>
@@ -78,8 +70,7 @@
   </div>
 
   <div class="pagination">
-    {{ url := "/tags/" + TrueTag + "?category=" + Queries.Category + "&order="
-    + Queries.Order + "&mode=" + Queries.Mode + "&ratio=" + Queries.Ratio + "&page=" }}
+    {{ url := URLC("page", "") }}
     <small>Page {{ Page }}</small>
     <br />
     {{ raw: createPaginator(url, "#checkpoint", Page, -1) }}
