--- a/views/css/style.css
+++ b/views/css/style.css
@@ -238,6 +238,7 @@ textarea[readonly] {
   max-width: 800px;
   min-width: 460px;
   padding: 1.5rem;
+  margin: 0.5rem 0;
 }
 .form-field header {
   margin: 1.5rem 0;
