--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -278,6 +278,7 @@ textarea[readonly] {
   max-width: 800px;
   min-width: 460px;
   padding: 1.5rem;
+  margin: 0.5rem 0;
 
   header {
     margin: 1.5rem 0;
