--- a/views/pages/rank.jet.html
+++ b/views/pages/rank.jet.html
@@ -35,8 +35,8 @@
     <br />
     {{ if Content == "all" }}
     <a href="{{ url }}original" class="switch-button">Original</a>
-    <a href="{{ url }}male" class="switch-button">Popular along males</a>
-    <a href="{{ url }}female" class="switch-button">Popular along females</a>
+    <a href="{{ url }}male" class="switch-button">Popular among males</a>
+    <a href="{{ url }}female" class="switch-button">Popular among females</a>
     {{ end }}
   </div>
   <br />
