--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -344,6 +344,10 @@ input[type="submit"][hidden] {
   display: none;
 }
 
+.switch-button[selected="1"] {
+  background: $highlight;
+}
+
 .switch-seperator {
   display: inline-block;
   margin-left: 10px;
