Fix the switcher system and implement it to the tag page

--- a/views/pages/components/switcher.jet.html
+++ b/views/pages/components/switcher.jet.html
@@ -1,4 +1,4 @@
-{{block Switcher(baseURL, paths, names, currentPath)}}
+{{block Switcher(baseURL, paths, names, currentPath="artworks")}}
     {{ range i, k := paths }}
         <a href="{{ baseURL }}{{k}}" class="switch-button" selected="{{ currentPath == k ? 1 : 0}}">
         {{names[i]}}
