--- a/views/pages/rankingCalendar.jet.html
+++ b/views/pages/rankingCalendar.jet.html
@@ -13,11 +13,11 @@
         <a href="{{ url }}r18g" class="switch-button">R-18G</a>
         <br />
         <a href="{{ url }}original" class="switch-button">Original</a>
-        <a href="{{ url }}male" class="switch-button">Popular along males</a>
-        <a href="{{ url }}female" class="switch-button">Popular along females</a>
+        <a href="{{ url }}male" class="switch-button">Popular among males</a>
+        <a href="{{ url }}female" class="switch-button">Popular among females</a>
         <br />
-        <a href="{{ url }}male_r18" class="switch-button">Popular along males (R-18)</a>
-        <a href="{{ url }}female_r18" class="switch-button">Popular along females (R-18)</a>
+        <a href="{{ url }}male_r18" class="switch-button">Popular among males (R-18)</a>
+        <a href="{{ url }}female_r18" class="switch-button">Popular among females (R-18)</a>
     </div>
 
     <div>
